# darkest-days

./: CMakeLists.txt  imgui.ini
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
opengl/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  Renderer.cpp  Renderer.hpp  VertexArray.hpp  VertexBuffer.cpp
res/models/sponza/: sponza.mtl
res/shaders/: basic.shader  model.shader
src/: Game.cpp  Game.hpp  main.cpp
src/InputHandler/: InputHandler.cpp  InputHandler.hpp
src/ecs/: System.hpp  Types.hpp
src/ecs/Managers/: ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  EntityManager.hpp  SystemManager.hpp
src/ecs/Systems/: RenderSystem.cpp  RenderSystem.hpp
src/renderer/: Camera.cpp  Camera.hpp  IndexBuffer.hpp  LmGui.cpp  LmGui.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
src/renderer/vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
